# pymob

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  README.md  pyproject.toml  test2.ipynb
.continue/rules/: dev-ops.md
.github/workflows/: python-app.yml  python-build.yml  python-release.yml  python-test.yml  test-conclusion.yml
case_studies/hiearchical_ode_model/: mod.py  sim.py
case_studies/hierarchical_ode_model/: sim.py
case_studies/lotka_volterra_UDE_case_study/: .gitignore  interactive.ipynb  pyproject.toml
case_studies/lotka_volterra_UDE_case_study/data/: UDE_obs_inferer_test.nc  UDE_obs_solver_test.nc  observations.nc  simulated_data.nc  simulated_noisy_data.nc
case_studies/lotka_volterra_UDE_case_study/lotka_volterra_UDE_case_study/: __init__.py  mod.py  plot.py  prob.py  sim.py
case_studies/lotka_volterra_UDE_case_study/lotka_volterra_UDE_case_study.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
case_studies/lotka_volterra_UDE_case_study/scenarios/InfererTest/: settings.cfg
case_studies/lotka_volterra_UDE_case_study/scenarios/UDESolverTest/: settings.cfg
case_studies/lotka_volterra_UDE_case_study/scenarios/UDETest/: settings.cfg
case_studies/lotka_volterra_UDE_case_study/scenarios/test_scenario_v2/: settings.cfg
case_studies/lotka_volterra_UDE_case_study/scripts/: FiguresFailedTraining.ipynb  FiguresSimpleCases.ipynb  SINDy.py  SINDy2.py  SINDy3.py  SINDy_nfic.py  array_job.sh  array_job2.sh  array_job3.sh  array_job4.sh  array_job5.sh  array_job_nfic.sh  generate_artificial_data.py  hyperparam_logs  hyperparameters.py  hyperparameters_nfic.py  input_list.txt  interactive.ipynb  minimal_script.py  test4.ipynb  test5.ipynb  testcfg.ipynb  validation.py  validation_nfic.py
case_studies/test_case_study/: data.py  mod.py  plot.py  prob.py  sim.py
docs/: README.md  build_documentation.sh  build_examples.sh  build_user_guide.sh  case_studies.md  modelling_framework.md  requirements.txt  run_doctest.sh  run_example_case_studies.sh  simulation.md
docs/source/: api.rst  case_studies.md  conf.py  index.md  index.rst  parameter_inference.md  pymob.rst  simulation.md
moppy/: infer.py  prior_predictive_checks.py  simulate.py  simulation.py
moppy/bash/: abc_master.sh  abc_redis_worker.sh  draw_snle_samples_casestudy.sh  evaluate_sbi_casestudy.sh  plot_posterior_predictions_casestudy.sh  process_simulations_casestudy.sh
moppy/inference/: interactive.py  optimization.py  optimize_indy.py  pyabc_backend.py  pymoo_backend.py
moppy/utils/: misc.py  plot_helpers.py  store_file.py
pymob/: __init__.py  infer.py  simulate.py  simulation.py
pymob/bash/: abc_redis.sh  generate_simulations_casestudy.sh  infer_uos.sh  infer_uos_array.sh  parse_commit_msg.sh  posterior_predictions_casestudy.sh  run_tests_casestudy.sh  simulate_and_train_casestudy.sh  train_network_casestudy.sh  (+1 more)
pymob/sim/: config.py  (+6 more)
tests/: conftest.py  fixtures.py  test_backend_numpyro.py  test_backend_optax.py  test_backend_pyabc.py  test_backend_pymoo.py  test_backend_scipy.py  test_backend_symbolic.py  test_case_studies.py  test_case_studies_gradients.py  test_case_study_config_registry.py  test_casestudy_api.py  test_config.py  test_inference.py  test_numpyro.py  test_numpyro_behavior.py  test_parameters.py  test_reporting.py  test_sbi.py  test_simulate.py  test_simulation.py  test_solvers.py  test_ude_optimization.py
(+88 files in other folders)
