[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moppy"
version = "0.1.0"
authors = [
  { name="Florian Schunck", email="fluncki@protonmail.com" },
]
description = "Modelling platform for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies=[
  "arviz ~= 0.15.1",
  "click ~= 8.1.3",
  "dpath ~= 2.1.6",
  "matplotlib ~= 3.7.1",
  "numpy ~= 1.24.0",
  "pandas ~= 2.0.2",
  "prettytable ~= 3.7.0",
  "scipy ~= 1.10.1",
  "scikit-learn ~= 1.2.2",
  "tqdm ~= 4.65.0",
  "toopy == 0.5.1",
  "xarray ~= 2023.11.0",
  "pathos ~= 0.3.1",
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
"Homepage" = "https://github.com/flo-schu/moppy"
"Issue Tracker" = "https://github.com/flo-schu/moppy/issues"

[project.scripts]
moppy-simulate = "moppy:simulate.main"
moppy-infer = "moppy:infer.main"

[tool.setuptools.packages.find]
include = ["moppy", "tests", "config", "docs", "case_studies"]

[project.optional-dependencies]
dev = ["pytest >= 7.3", "pyinstrument >= 4.5", "bumpver"]
inference = ["pyabc ~= 0.12.3"]
optimize = ["pymoo ~= 0.6.0"]
interactive = ["ipywidgets ~= 8.1.1", "IPython ~= 8.17.2"]
